--- a/WebContent/resources/learnweb-layout/sass/common/_global.scss
+++ b/WebContent/resources/learnweb-layout/sass/common/_global.scss
@@ -6,7 +6,8 @@ html {
   }
 }
 
-body {
+body,
+.layout-container {
   min-width: $min-width;
 }
 
